# tauri_api

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rustdoc.yml  test.yml
examples/leptos/: Cargo.toml
examples/leptos/src/: app.rs
examples/leptos/src-tauri/: Cargo.toml
examples/test/: Cargo.toml
examples/test/src/: app.rs
examples/test/src-tauri/: Cargo.toml
src/: error.rs  lib.rs
